2010-08-11  Yoshiki Hayashi  <yhayashi@google.com>

Reviewed by Shinichiro Hamaji.

        Make form controls, textarea, legend and datagrid treat width:
        auto as specified in stretching vertical flexbox.  Otherwise it's
        treated as intrinsic as before.
        https://bugs.webkit.org/show_bug.cgi?id=17918

        * fast/flexbox/vertical-box-form-controls-expected.txt: Added.
        * fast/flexbox/vertical-box-form-controls.html: Added.
2010-08-11  Yoshiki Hayashi  <yhayashi@google.com>

        Reviewed by Shinichiro Hamaji.

        Make form controls, textarea, legend and datagrid treat width:
        auto as specified in stretching vertical flexbox.  Otherwise it's
        treated as intrinsic as before.
        https://bugs.webkit.org/show_bug.cgi?id=17918

        Test: fast/flexbox/vertical-box-form-controls.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::adjustRenderStyle):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::sizesToIntrinsicWidth):

Canonical link: https://commits.webkit.org/55933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65131 268f45cc-cd09-0410-ab3c-d52691b4dbfc